# Research_proj

./: README.md  gibrish_text_soluiton.md
cv/autoresearch/: .gitignore  pyproject.toml
cv/autoresearch/cv_bench/: __init__.py  acquire_real_datasets.py  common.py  real_data.py  reporting.py  run_all.py  run_all_project_files.py  vision_utils.py
genai/autoresearch/: pyproject.toml
genai/autoresearch/ml/: README.md  __init__.py  common.py  project_agentic_frameworks_hardware_synthesis.py  project_black_box_prompt_optimization.py  project_constrained_generation_logit_masking.py  project_context_window_compression.py  project_direct_preference_optimization.py  project_edge_optimized_rag.py  project_hallucination_detection.py  project_mechanistic_interpretability.py  project_qlora_sub_billion_legal.py  project_rag_chunking_optimization.py  project_small_ai_agent_workflows.py  project_small_model_orchestration_ci_cd.py  project_stateful_multi_agent_debugging.py  project_structural_bias_evaluation.py  project_synthetic_data_generation_niche_classifiers.py  reporting.py  (+4 more)
rl/: README.md  pyproject.toml  research_report.md
rl/results/: all_experiments.csv  project_file_runs.md  project_summary.csv  test_results.md
rl/rlbench/: __init__.py  common.py  project_curriculum_jssp.py  project_dynamic_pricing.py  project_execution_trading.py  project_hierarchical_logistics.py  project_hvac_optimization.py  project_mapf_optimization.py  project_meta_market_adaptation.py  project_multi_agent_traffic.py  project_neuro_symbolic_planning.py  project_offline_resource_allocation.py  project_reward_shaping_energy.py  project_safe_chemical.py  project_safe_deterministic_envelopes.py  project_sim_to_real_transfer.py  project_supply_chain_routing.py  reporting.py  run_all.py  run_all_project_files.py  synthetic_envs.py
rl/tests/: __init__.py  test_smoke.py
(+138 files in other folders)
