[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cpu-rl-benchmark"
version = "0.1.0"
description = "CPU-first reinforcement learning benchmark suite"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "requests>=2.31",
]

[tool.pytest.ini_options]
testpaths = ["tests"]